; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-stm.c_stm_new.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-stm.c_stm_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stm_object = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.stm_object* (i8*, i32)* @stm_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.stm_object* @stm_new(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.stm_object*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call %struct.stm_object* @skynet_malloc(i32 12)
  store %struct.stm_object* %6, %struct.stm_object** %5, align 8
  %7 = load %struct.stm_object*, %struct.stm_object** %5, align 8
  %8 = getelementptr inbounds %struct.stm_object, %struct.stm_object* %7, i32 0, i32 2
  %9 = call i32 @rwlock_init(i32* %8)
  %10 = load %struct.stm_object*, %struct.stm_object** %5, align 8
  %11 = getelementptr inbounds %struct.stm_object, %struct.stm_object* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @stm_newcopy(i8* %12, i32 %13)
  %15 = load %struct.stm_object*, %struct.stm_object** %5, align 8
  %16 = getelementptr inbounds %struct.stm_object, %struct.stm_object* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  %17 = load %struct.stm_object*, %struct.stm_object** %5, align 8
  ret %struct.stm_object* %17
}

declare dso_local %struct.stm_object* @skynet_malloc(i32) #1

declare dso_local i32 @rwlock_init(i32*) #1

declare dso_local i32 @stm_newcopy(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
